# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "decoder_ring"
version = "0.1.2"
description = "Type-hinted interface to use several decoders on text-generation models"
readme = "README.md"
authors = [{ name = "Nick Doiron", email = "ndoiron@mapmeld.com" }]
license = { file = "LICENSE" }
keywords = ["transformers", "decoder", "text generation"]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "pylint", "mypy"]

[project.urls]
Homepage = "https://github.com/georeactor/decoder_ring"